reverting some 1.5-only calls to 1.4-compatible
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2406 961051c9-f516-0410-bf72-c9f7e237a7b7